<resources>
    <string name="app_name">Decision</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Decision">Decision</string>
    <string name="option">Option</string>
    <string name="help">Help</string>
    <string name="Navigationbar">Navigation bar</string>
    <string name="again">Again</string>
    <string name="helpTitle">Hint</string>
    <string name="about">About the application</string>

    //Да Нет
    <string name="yesnotext">You want to know the truth</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="helpTextYesNo">In this window, I will answer "Yes" or " No " to any of your questions.
        Feel free to ask a question and click " Again" ;)</string>

    //Меню
    <string name="yesno">Yes/No</string>
    <string name="number">Number</string>
    <string name="random">Random</string>



    //Число
    <string name="randomnumber">Random number</string>
    <string name="fromnumber">From</string>
    <string name="tonumber">To</string>
    <string name="helpTextNumber">Do you need a random number? I\'ll tell you :)
        Just click on the "Random number" button and I\'ll tell you a number from 1 to 100.
        If you want a number in some limit, just enter these limits. Good luck!</string>

    //Варианты
    <string name="severaltext">Here is your decision</string>
    <string name="givemeanswer">Give me answer</string>
    <string name="addalist">Add a list of options</string>
    <string name="updatelist">Updating the list of options</string>
    <string name="addoption">Add option</string>
    <string name="getdecision">Get decision</string>
    <string name="option_text">Option</string>
    <string name="warning">Warning !</string>
    <string name="warning_text">You have empty options.
        Proceed?</string>
    <string name="helpTextOption">Do you want me to choose a certain option?
Then add as many options as you need by clicking on the "Add option" button and fill them in with your own options.
Then click the "Get a solution" button and I\'ll tell you what to choose!</string>
    <string name="helpTextVariant">Click the "Give me an answer" button and I will tell you the correct option from your suggestions ;)
If you want to add or change your options, click the "Update the list of options"button.
And if you want to make a new list, click the "Add a list of options" button.
I hope I helped you, dear friend ;)
    </string>

    //About
    <string name="friend">Hello friend!</string>
    <string name="textAbout">This app is designed to help you make decisions.
Each window has a hint on how to use this app.
Good luck, dear friend!
    </string>





</resources>