<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".test_random"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/side_nav_bar"
            app:title="@string/Navigationbar"
            app:titleTextColor="@color/white">

            <ImageButton
                android:id="@+id/back_menu"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_baseline_arrow_forward_24">

            </ImageButton>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/text_several"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bubblegum_sans"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:text="@string/severaltext"
            android:textColor="@color/white"
            android:textSize="28sp" />

        <Button
            android:id="@+id/button_several"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/givemeanswer" />

        <Button
            android:id="@+id/button_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/addalist" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navmenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navheader"
        app:itemIconTint="#ffa500"
        app:menu="@menu/iconmenu">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>