<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Number">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/fromnumber"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/editTextNumber"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:fontFamily="@font/bubblegum_sans"
            android:gravity="center"
            android:inputType="number|textNoSuggestions"
            android:singleLine="false"
            android:text="1"
            android:textColor="@color/red"
            android:textColorHint="#000000"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="@string/tonumber"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:gravity="center"
            android:inputType="number|textNoSuggestions"
            android:text="100"
            android:fontFamily="@font/bubblegum_sans"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="0"
            android:textColor="@color/black"
            android:textSize="48sp"
            android:textStyle="bold"
            android:fontFamily="@font/bubblegum_sans"
            tools:textSize="48sp" />

        <Button
            android:id="@+id/randombtn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bubblegum_sans"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/randomnumber"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnHelpNumber"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:layout_marginBottom="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/help3"/>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>