<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_gradient"
    tools:context=".test">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/bubblegum_sans"
            android:text="Desicions"
            android:textColor="@color/black"
            android:textSize="42sp"
            android:textStyle="bold">

        </TextView>

        <Button
            android:id="@+id/lang_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.gridlayout.widget.GridLayout
                    android:id="@+id/gridLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="200dp"
                    app:columnCount="2"
                    app:rowCount="2">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/yes_no_card"
                        android:layout_width="120dp"
                        android:layout_height="210dp"
                        android:layout_margin="20dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_row="0"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/truefalse">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/bubblegum_sans"
                                android:text="@string/yesno"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="24sp">

                            </TextView>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/number_card"
                        android:layout_width="120dp"
                        android:layout_height="210dp"
                        android:layout_margin="20dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="0"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/number1">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/bubblegum_sans"
                                android:text="@string/number"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="24sp">

                            </TextView>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/random_card"
                        android:layout_width="120dp"
                        android:layout_height="210dp"
                        android:layout_margin="20dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="1"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/book2">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/bubblegum_sans"
                                android:text="@string/random"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="24sp">

                            </TextView>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/help_card"
                        android:layout_width="120dp"
                        android:layout_height="210dp"
                        android:layout_margin="20dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="1"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:src="@drawable/help">

                            </ImageView>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/bubblegum_sans"
                                android:text="@string/help"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="24sp">

                            </TextView>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </androidx.gridlayout.widget.GridLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>